--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 ---
 
-name: Terraform-project
+name: terraform-project
 
 on:
   push:
@@ -18,11 +18,11 @@ jobs:
           echo "SHORT_SHA=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_ENV
       - name: Build Docker Image
         run: |
-          docker build -t oumaymafh/Terraform-project:${{ env.SHORT_SHA }} .
+          docker build -t oumayma-farhat/terraform-project:${{ env.SHORT_SHA }} .
       - name: Login to Dockerhub
         run: |
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
       - name: Push to Dockerhub
         run: |
-          docker push oumaymafh/Terraform-project:${{ env.SHORT_SHA }}
+          docker push oumayma-farhat/terraform-project:${{ env.SHORT_SHA }}
       
